--- a/portfolio.html
+++ b/portfolio.html
@@ -2228,7 +2228,7 @@
                 <p class="section-subtitle">My professional journey and contributions</p>
                 <div class="experience-card">
                     <div class="experience-certificate">
-                        <img src="http://googleusercontent.com/file_content/0"
+                        <img src="Houston Certificate.jpg"
                              alt="Internship Certificate from Houston International Foods"
                              id="certificate-image"
                              onerror="this.onerror=null;this.src='https://placehold.co/400x560/0a0a0a/ffffff?text=Certificate';">
