added social links

--- a/portfolio.html
+++ b/portfolio.html
@@ -2286,10 +2286,10 @@
                             </div>
 
                             <div class="social-links">
-                                <a href="#" class="social-link" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                                <a href="#" class="social-link" aria-label="LinkedIn"><i
+                                <a href="https://github.com/KalashMaheshwari" class="social-link" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/kalash-maheshwari-7143b0372" class="social-link" aria-label="LinkedIn"><i
                                         class="fab fa-linkedin"></i></a>
-                                <a href="#" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.instagram.com/klshh.ig/" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>
                     </div>
