--- a/index.html
+++ b/index.html
@@ -2762,7 +2762,7 @@
                     </div>
                     <div id="about-scoop-card" class="about-grid-card">
                         <p>Current Focus</p>
-                        <h3>Building a real-time a 3D To-Do-List using three.js</h3>
+                        <h3>Building a secure Digital Safe Room app using Expo in React Native.</h3>
                     </div>
                 </div>
                 <div class="horizontal-timeline-wrapper">
