--- a/index.html
+++ b/index.html
@@ -2630,7 +2630,7 @@
                     </p>
                     <div class="hero-cta">
                         <a href="#contact" class="btn btn-primary">Let's Connect</a>
-                        <a href="Kalash Maheshwari CV.docx" class="btn btn-secondary" download>Download CV</a>
+                        <!-- <a href="Kalash Maheshwari CV.docx" class="btn btn-secondary" download>Download CV</a> -->
                     </div>
                 </div>
                 <div class="hero-image-wrapper">
